<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SAMIIoTSimpleMonitor</string>
    <string name="device_name">Device Name</string>
    <string name="device_id">Device ID</string>
    <string name="device_status">Device Status</string>
    <string name="status_update_time">Status Update Time</string>
    <string name="action_settings">Settings</string>
    <string name="websocketlive_status">Websocket live status</string>

    <string name="device_monitor_title">Home Sensor</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_states">Unknown states</string>
    <string name="unknown_update_time">Unknown update time</string>

</resources>
